Crash when changing audio strip source file #65651

Closed
opened 2019-06-08 23:26:52 +02:00 by Casey Connor · 6 comments

Operating system: Kubuntu 18.10, 4.18.0-20-generic #21-Ubuntu SMP Mon May 6 18:45:52 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux
Graphics card: NVIDIA Corporation GP106 [GeForce GTX 1060 6GB] (rev a1)
Broken: 2.80, 81b68f7279, 2019-06-08 13:24

  • start 2.80 with fresh config directory
  • open default cube scene
  • change bottom pane to video sequencer
  • add any sound file with Add -> Sound
  • in the video sequence editor, hit "N" to get the side menu
  • in the "Info" panel, under "Input", there are two file dialog icons: the first is between the "shield" and "X" icons, the second is on the next line
  • if I use the second one to change the audio file, it works
  • if I use the first one to change the audio file (or even just select the same file), blender crashes
# Blender 2.80 (sub 74), Commit date: 2019-06-08 13:24, Hash 81b68f7279cd
bpy.context.area.ui_type = '<UNKNOWN ENUM>'  # Property
bpy.context.space_data.recent_folders_active = 1  # Property
bpy.ops.sequencer.sound_strip_add(filepath="/path/to/audio/file.m4a", files=[{"name":"file.m4a", "name":"file.m4a"}], relative_path=True, frame_start=1, channel=2)  # Operator
bpy.ops.sequencer.select(extend=False, deselect_all=True, linked_handle=False, left_right='NONE', linked_time=False)  # Operator
bpy.ops.sequencer.select(extend=False, deselect_all=True, linked_handle=False, left_right='NONE', linked_time=False)  # Operator
bpy.ops.sequencer.select(extend=False, deselect_all=True, linked_handle=False, left_right='NONE', linked_time=False)  # Operator

# backtrace
/path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender(BLI_system_backtrace+0x1d) [0x13833ad]
/path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender() [0x1169ed9]
/lib/x86_64-linux-gnu/libc.so.6(+0x41100) [0x7f784a902100]
/path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender(AUD_SequenceEntry_setSound+0xc0) [0x41f8cd0]
/path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender() [0x142812b]
/path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender() [0x2e457b3]
/path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender() [0x1533146]
/path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender() [0x1536097]
/path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender() [0x153749c]
/path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender(wm_event_do_handlers+0x258) [0x1537ab8]
/path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender(WM_main+0x20) [0x152d7e0]
/path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender(main+0x30a) [0x10d021a]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xeb) [0x7f784a8e509b]
/path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender(_start+0x2a) [0x11667ea]
Operating system: Kubuntu 18.10, 4.18.0-20-generic #21-Ubuntu SMP Mon May 6 18:45:52 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux Graphics card: NVIDIA Corporation GP106 [GeForce GTX 1060 6GB] (rev a1) Broken: 2.80, 81b68f7279cd, 2019-06-08 13:24 - start 2.80 with fresh config directory - open default cube scene - change bottom pane to video sequencer - add any sound file with Add -> Sound - in the video sequence editor, hit "N" to get the side menu - in the "Info" panel, under "Input", there are two file dialog icons: the first is between the "shield" and "X" icons, the second is on the next line - if I use the second one to change the audio file, it works - if I use the first one to change the audio file (or even just select the same file), blender crashes ``` # Blender 2.80 (sub 74), Commit date: 2019-06-08 13:24, Hash 81b68f7279cd bpy.context.area.ui_type = '<UNKNOWN ENUM>' # Property bpy.context.space_data.recent_folders_active = 1 # Property bpy.ops.sequencer.sound_strip_add(filepath="/path/to/audio/file.m4a", files=[{"name":"file.m4a", "name":"file.m4a"}], relative_path=True, frame_start=1, channel=2) # Operator bpy.ops.sequencer.select(extend=False, deselect_all=True, linked_handle=False, left_right='NONE', linked_time=False) # Operator bpy.ops.sequencer.select(extend=False, deselect_all=True, linked_handle=False, left_right='NONE', linked_time=False) # Operator bpy.ops.sequencer.select(extend=False, deselect_all=True, linked_handle=False, left_right='NONE', linked_time=False) # Operator # backtrace /path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender(BLI_system_backtrace+0x1d) [0x13833ad] /path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender() [0x1169ed9] /lib/x86_64-linux-gnu/libc.so.6(+0x41100) [0x7f784a902100] /path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender(AUD_SequenceEntry_setSound+0xc0) [0x41f8cd0] /path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender() [0x142812b] /path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender() [0x2e457b3] /path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender() [0x1533146] /path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender() [0x1536097] /path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender() [0x153749c] /path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender(wm_event_do_handlers+0x258) [0x1537ab8] /path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender(WM_main+0x20) [0x152d7e0] /path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender(main+0x30a) [0x10d021a] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xeb) [0x7f784a8e509b] /path/to/blender-2.80-81b68f7279cd-linux-glibc224-x86_64/blender(_start+0x2a) [0x11667ea] ```
Author

Added subscriber: @clepsydrae

Added subscriber: @clepsydrae

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Richard Antalik was assigned by Sebastian Parborg 2019-06-17 12:05:43 +02:00

I'm getting an assert from the first "browse file" button:

blender/extern/audaspace/bindings/C/AUD_Sequence.cpp:286: void AUD_SequenceEntry_setSound(AUD_SequenceEntry*, AUD_Sound*): Assertion `sequence_entry' failed.

And I also get an assert for the second button:

blender/source/blender/blenkernel/intern/sound.c:89, sound_verify_evaluated_id(), at 'id->tag & (LIB_TAG_COPIED_ON_WRITE | LIB_TAG_COPIED_ON_WRITE_EVAL_RESULT | LIB_TAG_NO_MAIN)'

If I ignore that, I get the following segfault and backtrace for the first button (but not the second as stated in the report):

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x000055555cc6da32 in std::__shared_ptr<aud::SequenceEntry, (__gnu_cxx::_Lock_policy)2>::get (this=0x0)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/shared_ptr_base.h:1308
1308	      { return _M_ptr; }
(gdb) bt
#0  0x000055555cc6da32 in std::__shared_ptr<aud::SequenceEntry, (__gnu_cxx::_Lock_policy)2>::get (this=0x0)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/shared_ptr_base.h:1308
#1  0x000055555cc6da24 in std::__shared_ptr_access<aud::SequenceEntry, (__gnu_cxx::_Lock_policy)2, false, false>::_M_get (this=0x0)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/shared_ptr_base.h:1019
#2  0x000055555cc6da0a in std::__shared_ptr_access<aud::SequenceEntry, (__gnu_cxx::_Lock_policy)2, false, false>::operator-> (this=0x0)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/shared_ptr_base.h:1013
#3  0x000055555ccb1480 in AUD_SequenceEntry_setSound (sequence_entry=0x0, value=0x0)
    at /home/zed/prog/blender/extern/audaspace/bindings/C/AUD_Sequence.cpp:290
#4  0x0000555557e25b1c in BKE_sound_update_scene_sound (handle=0x0, sound=0x7fffd3292208)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/sound.c:669
#5  0x00005555582136d7 in rna_Sequence_sound_update (UNUSED_bmain=0x7fffeb8cbd08, UNUSED_scene=0x7fffe67fa008, ptr=0x7fffd00855b8)
    at /home/zed/prog/blender/source/blender/makesrna/intern/rna_sequencer.c:816
#6  0x000055555808e2e0 in rna_property_update (C=0x7fffeb891208, bmain=0x7fffeb8cbd08, scene=0x7fffe67fa008, ptr=0x7fffd00855b8,
    prop=0x55555e247080 <rna_SoundSequence_sound>) at /home/zed/prog/blender/source/blender/makesrna/intern/rna_access.c:2288
#7  0x000055555808e4a9 in RNA_property_update (C=0x7fffeb891208, ptr=0x7fffd00855b8, prop=0x55555e247080 <rna_SoundSequence_sound>)
    at /home/zed/prog/blender/source/blender/makesrna/intern/rna_access.c:2341
- 8  0x0000555558e67712 in sound_open_exec (C=0x7fffeb891208, op=0x7fffe57f6348) at /home/zed/prog/blender/source/blender/editors/sound/sound_ops.c:120
- 9  0x000055555829a564 in wm_handler_fileselect_do (C=0x7fffeb891208, handlers=0x7fffe6764898, handler=0x7fffd00067e8, val=2)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2415
#10 0x000055555829a8ee in wm_handler_fileselect_call (C=0x7fffeb891208, handlers=0x7fffe6764898, handler=0x7fffd00067e8, event=0x7fffd00a0e88)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2513
#11 0x000055555829bdc1 in wm_handlers_do_intern (C=0x7fffeb891208, event=0x7fffd00a0e88, handlers=0x7fffe6764898)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2895
#12 0x000055555829bf88 in wm_handlers_do (C=0x7fffeb891208, event=0x7fffd00a0e88, handlers=0x7fffe6764898)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2947
- 13 0x000055555829d15c in wm_event_do_handlers (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3316
- 14 0x000055555829059c in WM_main (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:417
#15 0x0000555557beb8b9 in main (argc=1, argv=0x7fffffffdff8) at /home/zed/prog/blender/source/creator/creator.c:500
I'm getting an assert from the first "browse file" button: ``` blender/extern/audaspace/bindings/C/AUD_Sequence.cpp:286: void AUD_SequenceEntry_setSound(AUD_SequenceEntry*, AUD_Sound*): Assertion `sequence_entry' failed. ``` And I also get an assert for the second button: ``` blender/source/blender/blenkernel/intern/sound.c:89, sound_verify_evaluated_id(), at 'id->tag & (LIB_TAG_COPIED_ON_WRITE | LIB_TAG_COPIED_ON_WRITE_EVAL_RESULT | LIB_TAG_NO_MAIN)' ``` If I ignore that, I get the following segfault and backtrace for the first button (but not the second as stated in the report): ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x000055555cc6da32 in std::__shared_ptr<aud::SequenceEntry, (__gnu_cxx::_Lock_policy)2>::get (this=0x0) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/shared_ptr_base.h:1308 1308 { return _M_ptr; } (gdb) bt #0 0x000055555cc6da32 in std::__shared_ptr<aud::SequenceEntry, (__gnu_cxx::_Lock_policy)2>::get (this=0x0) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/shared_ptr_base.h:1308 #1 0x000055555cc6da24 in std::__shared_ptr_access<aud::SequenceEntry, (__gnu_cxx::_Lock_policy)2, false, false>::_M_get (this=0x0) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/shared_ptr_base.h:1019 #2 0x000055555cc6da0a in std::__shared_ptr_access<aud::SequenceEntry, (__gnu_cxx::_Lock_policy)2, false, false>::operator-> (this=0x0) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/shared_ptr_base.h:1013 #3 0x000055555ccb1480 in AUD_SequenceEntry_setSound (sequence_entry=0x0, value=0x0) at /home/zed/prog/blender/extern/audaspace/bindings/C/AUD_Sequence.cpp:290 #4 0x0000555557e25b1c in BKE_sound_update_scene_sound (handle=0x0, sound=0x7fffd3292208) at /home/zed/prog/blender/source/blender/blenkernel/intern/sound.c:669 #5 0x00005555582136d7 in rna_Sequence_sound_update (UNUSED_bmain=0x7fffeb8cbd08, UNUSED_scene=0x7fffe67fa008, ptr=0x7fffd00855b8) at /home/zed/prog/blender/source/blender/makesrna/intern/rna_sequencer.c:816 #6 0x000055555808e2e0 in rna_property_update (C=0x7fffeb891208, bmain=0x7fffeb8cbd08, scene=0x7fffe67fa008, ptr=0x7fffd00855b8, prop=0x55555e247080 <rna_SoundSequence_sound>) at /home/zed/prog/blender/source/blender/makesrna/intern/rna_access.c:2288 #7 0x000055555808e4a9 in RNA_property_update (C=0x7fffeb891208, ptr=0x7fffd00855b8, prop=0x55555e247080 <rna_SoundSequence_sound>) at /home/zed/prog/blender/source/blender/makesrna/intern/rna_access.c:2341 - 8 0x0000555558e67712 in sound_open_exec (C=0x7fffeb891208, op=0x7fffe57f6348) at /home/zed/prog/blender/source/blender/editors/sound/sound_ops.c:120 - 9 0x000055555829a564 in wm_handler_fileselect_do (C=0x7fffeb891208, handlers=0x7fffe6764898, handler=0x7fffd00067e8, val=2) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2415 #10 0x000055555829a8ee in wm_handler_fileselect_call (C=0x7fffeb891208, handlers=0x7fffe6764898, handler=0x7fffd00067e8, event=0x7fffd00a0e88) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2513 #11 0x000055555829bdc1 in wm_handlers_do_intern (C=0x7fffeb891208, event=0x7fffd00a0e88, handlers=0x7fffe6764898) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2895 #12 0x000055555829bf88 in wm_handlers_do (C=0x7fffeb891208, event=0x7fffd00a0e88, handlers=0x7fffe6764898) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2947 - 13 0x000055555829d15c in wm_event_do_handlers (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3316 - 14 0x000055555829059c in WM_main (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:417 #15 0x0000555557beb8b9 in main (argc=1, argv=0x7fffffffdff8) at /home/zed/prog/blender/source/creator/creator.c:500 ```
Richard Antalik removed their assignment 2019-06-17 12:19:09 +02:00
Sergey Sharybin was assigned by Richard Antalik 2019-06-17 12:19:09 +02:00

Added subscriber: @iss

Added subscriber: @iss

This issue was referenced by b50de0f8b7

This issue was referenced by b50de0f8b75b9f7af62e09528635f6a9fdbb07cd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65651
No description provided.