Fix T65651: Crash when changing audio strip source file