source/blender/makesdna/DNA_ID.h
@@ -612,6 +612,8 @@ typedef enum IDRecalcFlag {
   ID_RECALC_AUDIO_MUTE = (1 << 18),
   ID_RECALC_AUDIO_LISTENER = (1 << 19),
 
+  ID_RECALC_AUDIO = (1 << 20),
+
   /***************************************************************************
    * Pseudonyms, to have more semantic meaning in the actual code without
    * using too much low-level and implementation specific tags. */
